--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/charts": "^3.10.4",
+    "@canvasjs/react-charts": "^1.0.2",
+    "chart.js": "^4.4.4",
+    "datatables.net": "^2.1.4",
+    "datatables.net-dt": "^2.1.4",
+    "datatables.net-responsive": "^3.0.2",
+    "jquery": "^3.7.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1"
