--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "dependencies": {
     "@canvasjs/charts": "^3.10.4",
     "@canvasjs/react-charts": "^1.0.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "chart.js": "^4.4.4",
     "datatables.net": "^2.1.4",
     "datatables.net-dt": "^2.1.4",
     "datatables.net-responsive": "^3.0.2",
+    "fontawesome": "^5.6.3",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-fontawesome": "^1.7.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1"
   },
