--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "datatables.net-dt": "^2.1.4",
     "datatables.net-responsive": "^3.0.2",
     "fontawesome": "^5.6.3",
+    "formik": "^2.4.6",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -26,7 +27,8 @@
     "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
