--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "datatables.net": "^2.1.4",
     "datatables.net-dt": "^2.1.4",
     "datatables.net-responsive": "^3.0.2",
+    "date-fns": "^3.6.0",
     "fontawesome": "^5.6.3",
     "formik": "^2.4.6",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.53.0",
