--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
