--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@canvasjs/react-charts": "^1.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "datatables.net": "^2.1.4",
     "datatables.net-dt": "^2.1.4",
